@@ -1,4 +1,16 @@
+2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-ruby.el: added flymake support to on the fly syntax check in ruby-mode
+
+	* rails-test.el (rails-test:error-regexp-alist): updated
+
+2007-04-02  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-lib.el (merge-abbrev-tables): mark abbrev as system 
+
 2007-04-01  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-snippets.el: updated snippets
 
 	* rails-ui.el (rails-minor-mode-nav-menu-bar-map): created separate menu entry for "Navigate", "Database", "Tests"
 
